update description, add openAPI specs
