# docs/swagger.yaml
@@ -3,63 +3,9 @@ info:
   description: Rest API for communication between SciCat frontend and depositor backend.
     Backend service enables deposition of datasets to OneDep API.
   title: OpenEm Depositor API
-  version: 1.0.0
+  version: api/v1
 paths:
   /onedep:
-    get:
-      consumes:
-      - multipart/form-data
-      description: Create a new deposition by uploading experiments, files, and metadata
-        to OneDep API.
-      parameters:
-      - description: User's email
-        in: formData
-        name: email
-        required: true
-        type: string
-      - description: Experiment type (e.g., single-particle analysis)
-        in: formData
-        name: experiments
-        required: true
-        type: string
-      - collectionFormat: multi
-        description: File(s) to upload
-        in: formData
-        items:
-          type: file
-        name: file
-        required: true
-        type: array
-      - description: Scientific metadata as a JSON string
-        in: formData
-        name: metadata
-        required: true
-        type: string
-      - description: File metadata as a JSON string
-        in: formData
-        name: fileMetadata
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Deposition ID
-          schema:
-            type: string
-        "400":
-          description: Error response
-          schema:
-            additionalProperties: true
-            type: object
-        "500":
-          description: Internal server error
-          schema:
-            additionalProperties: true
-            type: object
-      summary: Create a new deposition to OneDep
-      tags:
-      - deposition
     post:
       consumes:
       - multipart/form-data
@@ -114,4 +60,28 @@ paths:
       summary: Create a new deposition to OneDep
       tags:
       - deposition
+  /version:
+    get:
+      description: Create a new deposition by uploading experiments, files, and metadata
+        to OneDep API.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Depositior version
+          schema:
+            type: string
+        "400":
+          description: Error response
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Return current version
+      tags:
+      - version
 swagger: "2.0"
